<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/xnormal"
    android:paddingBottom="@dimen/xnormal"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:id="@+id/ll_login"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="20dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="false"
            app:cardBackgroundColor="@color/overlay_light_10"
            android:layout_marginTop="@dimen/xxxlarge"
            android:layout_marginLeft="@dimen/xxxlarge"
            android:layout_marginRight="@dimen/xxxlarge"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xnormal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:tint="@color/overlay_dark_10"
                    android:src="@drawable/qoost_logo_white"
                    android:contentDescription="@string/logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/xxnormal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/ts_xnormal"
                    android:layout_marginTop="@dimen/xnormal"
                    android:layout_marginBottom="@dimen/xnormal"
                    android:textColor="@color/overlay_light_80"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@color/transparent"
                    android:textSize="@dimen/ts_xsmall"
                    android:letterSpacing="0.03"
                    android:padding="@dimen/normal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/overlay_light_40"
                    android:drawableStart="@drawable/ic_message"
                    android:drawablePadding="@dimen/normal"
                    android:hint="@string/email_prompt"
                    android:inputType="textEmailAddress" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/overlay_light_20"
                    android:layout_marginEnd="@dimen/normal"
                    android:layout_marginStart="@dimen/normal"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xnormal"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/normal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ts_xsmall"
                    android:letterSpacing="0.03"
                    android:background="@color/transparent"
                    android:textColorHint="@color/overlay_light_40"
                    android:drawableStart="@drawable/ic_padlock"
                    android:drawablePadding="@dimen/normal"
                    android:hint="@string/password_prompt"
                    android:inputType="textPassword" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/overlay_light_20"
                    android:layout_marginEnd="@dimen/normal"
                    android:layout_marginStart="@dimen/normal"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xnormal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_as"
                    android:layout_margin="@dimen/normal"
                    android:textColor="@color/overlay_light_80"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:paddingStart="@dimen/normal"
                    android:paddingEnd="@dimen/normal"
                    android:layout_marginBottom="@dimen/xxnormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/overlay_light_80"
                        android:letterSpacing="0.02"
                        android:textColor="@color/overlay_light_50"
                        android:text="@string/pemilik" />
                    <View
                        android:layout_width="@dimen/xnormal"
                        android:layout_height="match_parent"/>
                    <RadioButton
                        android:id="@+id/radFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/overlay_light_80"
                        android:letterSpacing="0.02"
                        android:textColor="@color/overlay_light_50"
                        android:text="@string/penghuni" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="@dimen/normal"
            android:src="@drawable/ic_check"
            android:tint="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_login"
            android:contentDescription="@string/login" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/xxxlarge"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:src="@drawable/ic_check"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/btn_register"
                android:contentDescription="@string/login" />
            <View
                android:layout_width="@dimen/normal"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/bt_google_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:src="@drawable/ic_check"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:paddingStart="@dimen/xnormal"
                android:paddingEnd="@dimen/xnormal"
                android:drawableStart="@drawable/ic_google_plus_logo"
                android:background="@drawable/btn_google_login"
                android:contentDescription="@string/google" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>